Fixed javascript for the dark mode and a little bit of the css. Now the toggle button properly remains on the page and changes it's background color. Before the fix the button style would disappear and wouldn't change background color. Now it looks much better

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -70,6 +70,20 @@
   transition: background-color ease 0.3s;
 }
 
+.untoggle:before {
+  content: "";
+  display: block;
+  position: absolute;
+  z-index: 2;
+  width: 28px;
+  height: 28px;
+  background: var(--romanSilver);
+  right: 2px;
+  top: 2px;
+  border-radius: 50%;
+  transition: all cubic-bezier(0.3, 1.5, 0.7, 1) 0.3s;
+}
+
 .toggle:before {
   content: "";
   display: block;
